# rdk-x5-xlerobot

./: .env.example  .gitignore  ASR_问题修复验证报告.md  ASR异步编程问题修复验证报告.md  ASR端到端测试技术报告.md  ASR系统问题诊断报告.md  CAMERA_HARDWARE_ANALYSIS_REPORT.md  CLAUDE.md  README.md  ThreadSafeAudioRecorder_修复完成验证报告.md  asr_e2e_test_result.txt  camera_system_info.txt  complete_env_check.sh  csi_camera_capture.py  debug_asr_bridge.py  debug_bridge_detailed.py  demo_working_asr.sh  direct_asr_test.py  direct_vin_capture.py  fix_asr_audio_access.py  fix_audio_device_access.py  fix_python_env.sh  hobot_camera_capture.py  hobot_cv_camera_capture.py  prepare_user_testing.sh  quick_audio_fix.py  real_csi_camera_capture.py  requirements-sprint1-fixed.txt  requirements-sprint1.txt  requirements.txt  run_epic1_tests.sh  setup_aliyun_api.sh  setup_xlerobot_env.sh  simple_camera_test.py  start_development.sh  start_test_mode.sh  start_voice_assistant.sh  story-context-1.8-system-optimization-deployment.xml  test_asr_e2e_complete.py  test_asr_fix_verification.py  (+11 more)
config/: aliyun_nls_config.yaml  tts_config.yaml  wake_word_config.yaml
deployment/: WORKPACKAGE3_COMPLETE_DELIVERY.md  WORKPACKAGE3_DEPLOYMENT_STRATEGY.md  WORKPACKAGE3_PRODUCTION_VALIDATION.md
docs/: ASR_FIX_DEPLOYMENT_COMPLETE.md  ASR_FORMAT_FIX_TEST_REPORT.md  ASR_REAL_STATUS.md  ASR系统技术问题修复完成报告.md  ASR语音唤醒问题排查完整记录.md  README.md  aliyun-api-integration-guide.md  aliyun-nls-configuration-guide.md  aliyun-nls-technical-reference.md  aliyun-nls-websocket-connection-guide.md  aliyun-token-management-guide.md  api-contracts.md  architecture-analysis.md  architecture-decisions-2025-11-08.md  architecture-design-phase1-xlerobot.md  asr-service-technical-specification.md  asr-tts-completion-status-update.md  asr-tts-incomplete-tasks-summary.md  asr_websocket_fix_report.md  automated_test_framework.md  backlog.md  backward-compatibility-analysis-xlerobot.md  bmad-brownfield-level4-reinitialization-final.md  bmad-workflow-status-launch-file-fix-2025-11-17.md  bmad-workflow-status-update-2025-11-17.md  bmad-workflow-update-verification-2025-11-08.md  bmm-workflow-status.md  brainstorm-analysis-xlerobot.md  brownfield-level-4-compliance-report.md  brownfield-level4-compliance-checklist-epic1.md  brownfield-level4-reinitialization-complete.md  brownfield-level4-reinitialization-report.md  change-implementation-strategy-xlerobot.md  code-structure-analysis.md  component-inventory.md  current-system-status-report.md  data-models.md  deployment-guide.md  development-environment-checklist.md  development-execution-testing-phase3-xlerobot.md  (+71 more)
launch/: tts_service.launch.py
monitoring/: README.md  docker-compose.monitoring.yml  quick_test.py  start_monitoring.sh  stop_monitoring.sh
scripts/: check_aliyun_api.py  install_dependencies.sh  manage_env.py  performance_test.py  setup_autostart.sh  setup_environment.sh  sync_with_github.py  test_aliyun_connection.sh  validate_aliyun_config.sh  validate_environment.sh  verify_asr_fix_deployment.py  verify_project_status.py
src/: aliyun_nls_token_manager.py  real_epic1_voice_system.py  real_wake_word_demo.py  simple_real_audio_test.py  simple_wake_word_demo.py  start_epic1_services.py  story_1_8_deployment_manager.py  story_1_8_integration_optimizer.py  story_1_8_main.py  story_1_8_system_monitor.py  story_1_8_user_acceptance_test.py  xlerobot_real_voice_simple.py  xlerobot_smart_voice_assistant.py  xlerobot_voice_assistant_real.py
src/audio_msg/: CMakeLists.txt  package.xml
src/audio_msg/action/: ContinuousRecognition.action
src/audio_msg/msg/: ASRResult.msg  ASRStatus.msg  AudioConfig.msg  AudioData.msg  AudioStatus.msg  LLMResponse.msg  LLMStatus.msg  TTSStatus.msg
src/audio_msg/srv/: ASRConfigure.srv  AudioConfigure.srv  SetAudioDevice.srv
src/xlerobot/: CMakeLists.txt  __init__.py  package.xml
src/xlerobot/launch/: test_asr_bridge.launch.py  voice_assistant.launch.py
src/xlerobot/nodes/: __init__.py  asr_bridge_node.py  llm_service_node.py  tts_service_node.py  voice_assistant_coordinator.py
src/xlerobot/resource/: xlerobot
src/xlerobot/xlerobot/: __init__.py
src/xlerobot_online_dialogue/: CMakeLists.txt  package.xml
src/xlerobot_online_dialogue/config/: online_dialogue_config.yaml
src/xlerobot_online_dialogue/launch/: online_dialogue.launch.py
src/xlerobot_online_dialogue/msg/: OnlineDialogueInput.msg  OnlineDialogueResponse.msg
src/xlerobot_online_dialogue/xlerobot_online_dialogue/: __init__.py  cantonese_text_processor.py  online_dialogue_api.py  online_dialogue_node.py  simple_session_manager.py
src/xlerobot_vision/: CMakeLists.txt  integration_test.py  multimodal_context.py  package.xml  setup.py  simple_api_test.py  test_fixes_verification.py  test_qwen_vl_client.py  vision_llm_node.py
src/xlerobot_vision/launch/: vision_service.launch.py
src/xlerobot_vision/scripts/: vision_llm_node.py
src/xlerobot_vision/xlerobot_vision/: __init__.py  qwen_vl_client.py
testing/: WORKPACKAGE4_UAT_COMPLETE_REPORT.md  WORKPACKAGE4_UAT_FRAMEWORK.md  uat_test_executor.py
tests/: README.md  camera_init.py  fixed_real_pipeline_test.py  quick_verification.py  real_epic1_verification.py  real_epic1_verification_1763205692.md  real_epic1_verification_1763205703.md  real_epic1_verification_1763208184.md  real_epic1_verification_1763208381.md  real_epic1_verification_1763248644.md  real_epic1_verification_1763296107.md  real_epic1_verification_1763298926.md  real_epic1_verification_1763392120.md  real_pipeline_test.py  run_all_tests.py  run_voice_assistant_test.py  simple_epic1_check.py  story1_2_detailed_analysis.py  test_aliyun_api_integration.py  test_asr_format_fix.py  test_audio_components.py  test_audio_pipeline.py  test_complete_pipeline.py  test_correct_audio_fix.py  test_dynamic_messages.py  test_e2e_functionality.py  test_e2e_integration.py  test_epic1_complete_chain.py  test_epic1_complete_integration.py  test_ros2_nodes.py  verify_epic1_complete_functionality.py
tools/: audio_device_diagnostic.py  env_pipeline_test.py  quick_pipeline_test.py  simple_test_pipeline.py  tts_only_test.py  (+6 more)
(+332 files in other folders)
